{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 149,
  "lineage": "ad30c1e2-5b3a-251d-0c69-07e419d18cdf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549616411959:loadbalancer/app/nginx-lb/88cf569a9187d65d",
            "arn_suffix": "app/nginx-lb/88cf569a9187d65d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-2106619534.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:549616411959:loadbalancer/app/nginx-lb/88cf569a9187d65d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ba694a726c9f271"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e9ea9790f3c1e35"
              },
              {
                "subnet_id": "subnet-0b55d9f1a9141ba6f"
              },
              {
                "subnet_id": "subnet-0fbbe017d49fe7030"
              }
            ],
            "subnets": [
              "subnet-03e9ea9790f3c1e35",
              "subnet-0b55d9f1a9141ba6f",
              "subnet-0fbbe017d49fe7030"
            ],
            "vpc_id": "vpc-03ff790dd42e4567a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nginx_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549616411959:listener/app/nginx-lb/88cf569a9187d65d/c7176d1e3758e934",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549616411959:targetgroup/nginx/4a70cc2410d631bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549616411959:listener/app/nginx-lb/88cf569a9187d65d/c7176d1e3758e934",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:549616411959:loadbalancer/app/nginx-lb/88cf569a9187d65d",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549616411959:targetgroup/nginx/4a70cc2410d631bd",
            "arn_suffix": "targetgroup/nginx/4a70cc2410d631bd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549616411959:targetgroup/nginx/4a70cc2410d631bd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:security-group/sg-0d24da51a33e224b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04ba694a726c9f271"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d24da51a33e224b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ba694a726c9f271"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nginx-instance",
            "name_prefix": "",
            "owner_id": "549616411959",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nginx_lb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:security-group/sg-04ba694a726c9f271",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ba694a726c9f271",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nginx-lb",
            "name_prefix": "",
            "owner_id": "549616411959",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:internet-gateway/igw-02da0dfa2890b104b",
            "id": "igw-02da0dfa2890b104b",
            "owner_id": "549616411959",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            },
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02da0dfa2890b104b",
            "id": "r-rtb-0444a8e0fe373c3bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0444a8e0fe373c3bc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:route-table/rtb-0444a8e0fe373c3bc",
            "id": "rtb-0444a8e0fe373c3bc",
            "owner_id": "549616411959",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main_vpc-public"
            },
            "tags_all": {
              "Name": "main_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d34638e30f8c8cb3",
            "route_table_id": "rtb-0444a8e0fe373c3bc",
            "subnet_id": "subnet-03e9ea9790f3c1e35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8e27fccbb1c621e",
            "route_table_id": "rtb-0444a8e0fe373c3bc",
            "subnet_id": "subnet-0b55d9f1a9141ba6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08712d16047e973df",
            "route_table_id": "rtb-0444a8e0fe373c3bc",
            "subnet_id": "subnet-0fbbe017d49fe7030"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:subnet/subnet-03e9ea9790f3c1e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e9ea9790f3c1e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549616411959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "main_vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:subnet/subnet-0b55d9f1a9141ba6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55d9f1a9141ba6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549616411959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "main_vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:subnet/subnet-0fbbe017d49fe7030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbbe017d49fe7030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549616411959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "main_vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-03ff790dd42e4567a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549616411959:vpc/vpc-03ff790dd42e4567a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f00038495bff750f",
            "default_route_table_id": "rtb-00cb3a7d3b77d155f",
            "default_security_group_id": "sg-0769754b2d0eff0ce",
            "dhcp_options_id": "dopt-0610224572a89f93f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03ff790dd42e4567a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cb3a7d3b77d155f",
            "owner_id": "549616411959",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}